# simple-crawler

./: Makefile  README.md  main.py  pyproject.toml
config/: seed.txt  seed_projects.txt
scripts/: config_local.js  config_python.js  database.js  dbworker.js  entries_library.js  events.js  library.js  project.js  ui.js
src/: applogging.py  configuration.py  controller.py  dbconnection.py  entries.py  serializers.py  socialdata.py  sourcedata.py  sources.py  system.py  taskrunner.py
templates/: templates.py
